# linux_dev

./: .gitignore
01_TerminalProject/: .Show.c.swp  Makefile  Show  Show.c
02_Multifile/: Makefile  fun.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  test1.gdb  test1.txt  test2.gdb  test2.txt
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  protect.c
07_Environmental/: Makefile.am  configure.ac  rhasher.c  test.sh
08_I18n/: .gitignore  README.md  autogen.sh  configure.ac
08_I18n/po/: Makevars  ru.po
08_I18n/src/: Makefile.am  main.c
09_PatchDiff/: Makefile  maze.c  patch1.patch  patch2.patch  patch3.patch
10_LibTesting/: Makefile  growable_buf.c  growable_buf.h  tests.c
11_Documenting/: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
11_Documenting/po/: Makevars  ru.po
11_Documenting/src/: Makefile.am  main.c
12_InstallPackaging/: README.md
12_InstallPackaging/tplotter/: CMakeLists.txt  README.md  cmake_uninstall.cmake.in
12_InstallPackaging/tplotter/doc/: Doxyfile.in  tplotter.1
12_InstallPackaging/tplotter/include/: eval.h
12_InstallPackaging/tplotter/po/: CMakeLists.txt  ru.po
12_InstallPackaging/tplotter/src/: CMakeLists.txt  config.h.in  main.c
12_InstallPackaging/tplotter/src/libeval/: CMakeLists.txt  eval.c
12_InstallPackaging/tplotter/tests/: CMakeLists.txt  test_eval.c
